<resources>

    <string name="app_name">Solar Calculator for Android</string>

    <string name="title_activity_main">SolarCalculator</string>
    
    <string name="menuNew">New</string>
    <string name="menuRetrieve">Retrieve Results</string>
    <string name="menuManage">Manage Results</string>
    <string name="menuQuit">Quit</string>

    <string name="next">Next</string>
    <string name="previous">Back</string>
    <string name="close">Close</string>

    <string name="applicationTitle">Solar Energy Calculator</string>
    <string name="applicationBlurb">A simple Solar Power Calculator for domestic installations.</string>
    <string name="applicationCopyright">Copyright 2012, Team Anonymous (QUT)</string>
    <string name="applicationLicence">Released under the GPL v3.</string>

    <string name="applicationFinishTitle">Thank You</string>
    <string name="applicationFinishText">Thank you for using the Solar Energy Calculator.\nIf you have any questions please do not hesitate to contact the development team.</string>
    
    <string name="setupTitle">Setup Description</string>
	<string name="setupName">Name</string>
	<string name="setupDescription">Description</string>
	
	<string name="locationTitle">Location</string>
	<string name="locationDescription">Predefined Locations</string>
	<string name="locationLongitude">Longitude</string>
	<string name="locationLatitude">Latitude</string>
	<string name="locationName">Name</string>
	<string name="locationMapType">Map View</string>
	<string name="locationMapSatellite">Satellite</string>
	<string name="LocationMapStreet">Street</string>
	<string name="locationMapTraffic">Traffic</string>
	
	<string name="usageTitle">Customer Usage</string>
	<string name="usageDailyAverage">Daily Average Usage (kWh)</string>
	<string name="usageDayTime">Day Time Hourly Usage (kWh)</string>
	<string name="usageMonthly">Monthly Usage (kWh)</string>
	<string name="usageHowTo">Please enter only one amount that best defines your average usage on either an hourly basis, daily basis or monthly basis</string>
	
	<string name="tariffTitle">Tariff Rates</string>
	<string name="tariffDefined">Predefined Tariffs</string>
	<string name="tariff11Cost">Tariff 11 Cost (cents)</string>
	<string name="tariff33Cost">Tariff 33 Cost (cents)</string>
	<string name="tariff11Fee">Tariff 11 Fee (cents)</string>
	<string name="tariff33Fee">Tariff 33 Fee (cents)</string>
	<string name="tariffFeedIn">Feed in Fee (cents)</string>
	<string name="tariffIncrease">Annual Tariff Increase</string>
	
	<string name="inverterTitle">Electrical Setup</string>
	<string name="inverterName">Inverter</string>
	<string name="inverterDetails">Inverter Details</string>
	<string name="inverterWiringLength">Wiring Length (m)</string>
	<string name="inverterWiringEff">Wiring Efficiency (%)</string>
	<string name="inverterEdit">Edit</string>
	<string name="inverterEditCost">Cost</string>
	<string name="inverterEditRRP">RRP</string>
	<string name="inverterEditWattage">Wattage</string>
	<string name="inverterEditLife">Expected Life</string>
	<string name="inverterEditEfficiency">Rated Efficiency</string>
	<string name="inverterEditEfficiencyLoss">Efficiency Loss Per Year</string>
	
	<string name="panelsTitle">Solar Panel Configuration</string>
	<string name="panelsName">Solar Panel</string>
	<string name="panelsAdd">Add Panel</string>
	<string name="panelsRemove">Remove Panel</string>
	<string name="panelsEdit">Edit Panel</string>
	<string name="panelsWattage">Wattage</string>
	<string name="panelsCount">Count</string>
	<string name="panelsDiection">Direction</string>
	<string name="panelsAzimuth">Azimuth</string>
	<string name="panelsEditPanelHowTo">To edit a row of panels, long click on the row defining the panel configuration.</string>
	<string name="panelUseSensor">Utilise compass</string>
	
	<string name="confirmationTitle">Setup Confirmation</string>
	<string name="confirmationMessage">If you are happy with the above details, please click on next to generate a report.</string>
	<string name="confirmationYears">Report Projection (Yrs)</string>
	
	<string name="resultsTitle">Results</string>
	<string name="resultsSummary">Summary</string>
	<string name="resultsGraph">Graph</string>
	<string name="resultsDetail">Results Table</string>
	<string name="resultsWaitSummary">Waiting for results&#8230;</string>
	<string name="comparisonAdd">Add</string>
</resources>