<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wizardStartLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
        <ImageView
        android:id="@+id/imageViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/applicationTitle" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/imageViewMain"
        android:text="@string/applicationTitle"
        android:textSize="@dimen/TextHeader"
        android:gravity="center" />

    <TextView
        android:id="@+id/textViewCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewTitle"
        android:paddingTop="@dimen/ButtonSmall"
        android:text="@string/applicationCopyright"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewLicence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCopyright"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/ButtonSmall"
        android:text="@string/applicationLicence"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>