<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewInverterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/inverterTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewInverterName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/inverterName"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/spinnerInverters"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textViewInverterName"
            android:layout_toRightOf="@id/textViewInverterName"
            android:padding="5dp" />

        <TextView
            android:id="@+id/textViewInverterDetails"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewInverterName"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/inverterDetails"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextInverterDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/textViewInverterDetails"
            android:layout_toRightOf="@id/textViewInverterDetails"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="top|left|center_vertical"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:scrollbars="horizontal|vertical" >
        </EditText>
        
        <Button
            android:id="@+id/buttonInverterEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/editTextInverterDetails"
            android:layout_toRightOf="@id/editTextInverterDetails"
            android:padding="5dp"
            android:text="@string/inverterEdit" />

        <TextView
            android:id="@+id/textViewWiringLength"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/editTextInverterDetails"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/inverterWiringLength"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextWiringLength"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textViewWiringLength"
            android:layout_toRightOf="@+id/textViewWiringLength"
            android:ems="10"
            android:inputType="numberDecimal"
            android:padding="5dp" >
        </EditText>
        
        <TextView
            android:id="@+id/textViewWiringEff"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textViewWiringLength"
            android:padding="5dp"
            android:text="@string/inverterWiringEff"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextWiringEff"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewWiringEff"
            android:layout_toRightOf="@+id/textViewWiringEff"
            android:ems="10"
            android:inputType="numberDecimal"
            android:padding="5dp" >
        </EditText>

    </RelativeLayout>

</LinearLayout>